--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "day19",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "dev": "parcel src/index.html",
+  "build": "parcel build src/index.html"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
